small fix to z-index

--- a/css/style.scss
+++ b/css/style.scss
@@ -25,7 +25,7 @@
 header {
   //border-bottom: 1px solid #f1f1f1;
   padding: $vertical-margin-small 0 0 0;
-  z-index: 100;
+  z-index: 100000; // should be more than slick arrow's z-index (library we are using)
 }
 
 .home .hero {
